--- a/html_advanced/1-index.html
+++ b/html_advanced/1-index.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-    <meta charset="UTF-8">
-    <title>My First HTML Page</title>
-    <link rel="stylesheet" href="styles.css">
+    <!-- Head tag is here but empty -->
 </head>
 <body>
-    <h1>Welcome to My Webpage</h1>
-    <p>This is a sample paragraph on my webpage.</p>
-    <img src="image.jpg" alt="A descriptive image">
+    <!-- Body tag is here but empty -->
 </body>
 </html>
