--- a/html_advanced/20-index.html
+++ b/html_advanced/20-index.html
@@ -13,13 +13,19 @@
     <!-- Header -->
     <header>
         <div>
-        <div>
-            <a href="/">
-            <span>Techium</span>
-        </a>
-        </div>
+            <div>
+                <a href="/">
+                    <span>Techium</span>
+                </a>
+            </div>
             <nav>
                 <a href="/">Home</a>
+                <a href="#services">Services</a>
+                <a href="#works">Works</a>
+                <a href="#about">About</a>
+                <a href="#latest_news">Latest news</a>
+                <a href="#testimonials">Testimonials</a>
+                <a href="#contact">Contact</a>
             </nav>
         </div>
     </header>
@@ -38,12 +44,11 @@
                 </div>
             </section>
 
-                <!-- Services section -->
+            <!-- Services section -->
             <section>
                 <div>
                     <header>
                         <h2>Services</h2>
-                        <a>Services</a>
                         <p>We work with you</p>
                     </header>
                     <div>
@@ -57,7 +62,7 @@
                 </div>
             </section>
 
-        <!-- Works section -->
+            <!-- Works section -->
             <section>
                 <div>
                     <header>
@@ -95,6 +100,7 @@
                     </div>
                 </div>
             </section>
+
             <!-- Latest news section -->
             <section>
                 <div>
